fix #32: if wiremockFilesDir contains other files than mapping files it fails